# Drone-detection-dataset

./: .gitignore  .gitmodules  README.md  analyze.py  convert.py  csv_to_yolo.py  preprocess_data.py  pyproject.toml  split_dataset.py  temporal_engine.md  temporal_train.py  train_temporal_yolo.py  validate.py
output_IR/: IR_AIRPLANE_001_LABELS.csv  IR_AIRPLANE_002_LABELS.csv  IR_AIRPLANE_003_LABELS.csv  IR_AIRPLANE_004_LABELS.csv  IR_AIRPLANE_005_LABELS.csv  IR_AIRPLANE_006_LABELS.csv  IR_AIRPLANE_007_LABELS.csv  IR_AIRPLANE_008_LABELS.csv  IR_AIRPLANE_009_LABELS.csv  IR_AIRPLANE_010_LABELS.csv  IR_AIRPLANE_011_LABELS.csv  IR_AIRPLANE_012_LABELS.csv  IR_AIRPLANE_013_LABELS.csv  IR_AIRPLANE_014_LABELS.csv  IR_AIRPLANE_015_LABELS.csv  IR_AIRPLANE_016_LABELS.csv  IR_AIRPLANE_017_LABELS.csv  IR_AIRPLANE_018_LABELS.csv  IR_AIRPLANE_019_LABELS.csv  IR_AIRPLANE_020_LABELS.csv  IR_AIRPLANE_021_LABELS.csv  IR_AIRPLANE_022_LABELS.csv  IR_AIRPLANE_023_LABELS.csv  IR_AIRPLANE_024_LABELS.csv  IR_AIRPLANE_025_LABELS.csv  IR_AIRPLANE_026_LABELS.csv  IR_AIRPLANE_027_LABELS.csv  IR_AIRPLANE_028_LABELS.csv  IR_AIRPLANE_029_LABELS.csv  IR_AIRPLANE_030_LABELS.csv  IR_AIRPLANE_031_LABELS.csv  IR_AIRPLANE_032_LABELS.csv  IR_AIRPLANE_033_LABELS.csv  IR_AIRPLANE_034_LABELS.csv  IR_AIRPLANE_035_LABELS.csv  IR_AIRPLANE_036_LABELS.csv  IR_AIRPLANE_037_LABELS.csv  IR_AIRPLANE_038_LABELS.csv  IR_AIRPLANE_039_LABELS.csv  IR_AIRPLANE_040_LABELS.csv  (+325 more)
output_V/: V_AIRPLANE_001_LABELS.csv  V_AIRPLANE_002_LABELS.csv  V_AIRPLANE_003_LABELS.csv  V_AIRPLANE_004_LABELS.csv  V_AIRPLANE_005_LABELS.csv  V_AIRPLANE_006_LABELS.csv  V_AIRPLANE_007_LABELS.csv  V_AIRPLANE_008_LABELS.csv  (+277 more)
training/: data.py  (+5 more)
