[tool.poetry]
name = "drone-detection-dataset"
version = "1.0.0"
description = "Dataset and tools for drone detection using IR, visible, and audio data with YOLO models"
authors = ["Fredrik Svanström <DroneDetectionThesis@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/Drone-detection-dataset"
repository = "https://github.com/Drone-detection-dataset"
documentation = "https://github.com/Drone-detection-dataset/README.md"
keywords = ["drone", "detection", "yolo", "computer-vision", "object-detection", "temporal-learning"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Image Recognition",
]
package-mode = false

[tool.poetry.dependencies]
python = "^3.8"
opencv-python = "^4.5.0"
numpy = "^1.20.0"
torch = "^2.0.0"
ultralytics = "^8.0.0"
tqdm = "^4.60.0"
pyyaml = "^6.0"
scipy = "^1.7.0"
psutil = "^5.8.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"
black = "^22.0.0"
isort = "^5.10.0"
flake8 = "^4.0.0"
mypy = "^0.950"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
target-version = ["py38", "py39", "py310", "py311"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 120
multi_line_output = 3
include_trailing_comma = true

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
